--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
 </head>
 <body>
     <header> 
-        <a href="" ><p>Web Studio</p> </a>
         <nav>
             <ul>
-                <li>Studio</li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
+                <li>
+                    <a href="./index.html"> Web Studio</a>
+                </li>
+                <li> <a href=""> Studio</a></li>
+                <li> <a href=""> Portfolio</a></li>
+                <li> <a href=""> Contacts</a></li>
             </ul>
         </nav>
         <address>
         <ul>
             <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
-            <li><a href="tel:+11 (000) 111-11-11"> +11 (000) 111-11-11</a></li>
+            <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
         </ul>
         </address>
     </header>
     <main>
-        <h1>Effective Solutions
-        for Your Business
-        </h1>
+        <section>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button"> Order Service </button>
+        </section>
+        <section>
         <ul>
             <li>
                 <h3>Strategy</h3>
@@ -54,42 +57,43 @@
                 </p>
             </li>
         </ul>
+        </section>
+        <section>
         <h2>Our Team</h2>
         <ul>
             <li>
                 <img src="./images/img.jpg"
                  alt="Mark's Guerrero photo "
-                width="320"/>
+                width="264"/>
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer </p>
             </li>
             <li>
                 <img src="./images/img (1).jpg" 
                 alt="Tom's Ford photo "
-                width="320" />
+                width="264" />
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img (2).jpg" 
                 alt="Camila's Garcia photo " 
-                width="320"/>
+                width="264"/>
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
                 <img src="./images/img (3).jpg"
                  alt="Daniel's Wilson photo " 
-                 width="320"/>
+                 width="264"/>
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
+        </section>
     </main>
     <footer>
-<p> 
-    <a href=""> Web Studio</a> 
-</p>
+    <a href="./index.html"> Web Studio</a> 
 <p>
     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 </p>
