--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 <body>
     <header> 
         <nav>
+            <a href="./index.html"> Web Studio</a>
             <ul>
-                <li>
-                    <a href="./index.html"> Web Studio</a>
-                </li>
-                <li> <a href=""> Studio</a></li>
-                <li> <a href=""> Portfolio</a></li>
-                <li> <a href=""> Contacts</a></li>
+                <li> <a href="">Studio</a></li>
+                <li> <a href="">Portfolio</a></li>
+                <li> <a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
@@ -30,6 +28,7 @@
         <button type="button"> Order Service </button>
         </section>
         <section>
+            <h2>section2</h2>
         <ul>
             <li>
                 <h3>Strategy</h3>
@@ -93,7 +92,7 @@
         </section>
     </main>
     <footer>
-    <a href="./index.html"> Web Studio</a> 
+    <a href="./index.html">Web Studio</a> 
 <p>
     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 </p>
