--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
     <header> 
@@ -28,7 +28,7 @@
         <button type="button"> Order Service </button>
         </section>
         <section>
-            <h2>section2</h2>
+            <h2>Benefits</h2>
         <ul>
             <li>
                 <h3>Strategy</h3>
@@ -63,28 +63,32 @@
             <li>
                 <img src="./images/img.jpg"
                  alt="Mark's Guerrero photo "
-                width="264"/>
+                width="264"
+                height="260"/>
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer </p>
             </li>
             <li>
                 <img src="./images/img(1).jpg" 
                 alt="Tom's Ford photo "
-                width="264" />
+                width="264"
+                height="260"/>
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img(2).jpg" 
                 alt="Camila's Garcia photo " 
-                width="264"/>
+                width="264"
+                height="260"/>
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
                 <img src="./images/img(3).jpg"
                  alt="Daniel's Wilson photo " 
-                 width="264"/>
+                 width="264"
+                 height="260"/>
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
